Modifica allo script python
Ora si ha la possibilità di capovolgere il profilo

--- a/FW_Mark1/FW_Mark1_VSPGeom.group.1
+++ b/FW_Mark1/FW_Mark1_VSPGeom.group.1
@@ -1,71 +1,75 @@
-Force Coefficients for group 1 --> /Users/danielegalluzzo/progettoAerodinamico/FW_Mark1/FW_Mark1_VSPGeom 
+Force Coefficients for group 1 --> /home/liukushka/Desktop/Università/Magistrale/ProgettoAerodinamico/progettoAerodinamico/FW_Mark1/FW_Mark1_VSPGeom 
 
    Time        Cx         Cy         Cz        Cxo        Cyo        Czo        Cxi        Cyi        Czi        Cmx        Cmy        Cmz        Cmxo       Cmyo       Cmzo       Cmxi       Cmyi       Cmzi        CL         CD         CS        CLo        CDo        CSo        CLi        CDi        CSi 
-   1.00000        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan 
-   2.00000        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan 
-   3.00000        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan 
+   1.00000       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan       -nan        nan       -nan    0.00000    0.00000    0.00000       -nan        nan       -nan       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan 
+   2.00000       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan       -nan        nan       -nan    0.00000    0.00000    0.00000       -nan        nan       -nan       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan 
+   3.00000       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan       -nan        nan       -nan    0.00000    0.00000    0.00000       -nan        nan       -nan       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan 
 
 
 Average over last full revolution: 
 
-   3.00000        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan        nan        nan        nan    0.00000    0.00000    0.00000        nan        nan        nan 
+   3.00000       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan       -nan        nan       -nan    0.00000    0.00000    0.00000       -nan        nan       -nan       -nan       -nan       -nan    0.00000    0.00000    0.00000       -nan       -nan       -nan 
 
 
 
 Average loading for wing surface: 1 --> VSP Surface: 1 ... NOTE: values are per area! 
 
   Station     S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
-        1   0.00000   0.32032   0.08642       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        2   0.11111   0.32010   0.08638       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        3   0.22222   0.31987   0.08635       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        4   0.33333   0.31965   0.08633       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        5   0.44444   0.31943   0.08632       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        6   0.55556   0.31943   0.08632       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        7   0.66667   0.31965   0.08633       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        8   0.77778   0.31987   0.08635       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        9   0.88889   0.32010   0.08638       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-       10   1.00000   0.32032   0.08642       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        1   0.00000   0.32032   0.04321      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   1.00000   0.32010   0.04319      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
 
 
 
 Average loading for wing surface: 2 --> VSP Surface: 2 ... NOTE: values are per area! 
 
   Station     S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
-        1   0.00000   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        2   0.14286   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        3   0.28571   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        4   0.42857   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        5   0.57143   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        6   0.71429   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        7   0.85714   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        8   1.00000   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        1   0.00000   0.32032   0.04321      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   1.00000   0.32010   0.04319      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+
+
+
+Average loading for wing surface: 3 --> VSP Surface: 3 ... NOTE: values are per area! 
+
+  Station     S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
+        1   0.00000   0.13203   0.01425      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   1.00000   0.12937   0.01727      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+
+
+
+Average loading for wing surface: 4 --> VSP Surface: 4 ... NOTE: values are per area! 
+
+  Station     S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
+        1   0.00000   0.13203   0.01425      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
+        2   1.00000   0.12937   0.01727      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
 
 
 
 Time history of loading for wing surface: 1 --> VSP Surface: 1 ... NOTE: values per area! 
 
   Station    Time       S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
-        1   0.00000   0.00000   0.32032   0.08642       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        2   0.00000   0.11111   0.32010   0.08638       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        3   0.00000   0.22222   0.31987   0.08635       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        4   0.00000   0.33333   0.31965   0.08633       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        5   0.00000   0.44444   0.31943   0.08632       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        6   0.00000   0.55556   0.31943   0.08632       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        7   0.00000   0.66667   0.31965   0.08633       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        8   0.00000   0.77778   0.31987   0.08635       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        9   0.00000   0.88889   0.32010   0.08638       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-       10   0.00000   1.00000   0.32032   0.08642       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        1   0.00000   0.00000   0.32032   0.04321      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   0.00000   1.00000   0.32010   0.04319      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
 
 
 
 Time history of loading for wing surface: 2 --> VSP Surface: 2 ... NOTE: values per area! 
 
   Station    Time       S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
-        1   0.00000   0.00000   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        2   0.00000   0.14286   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        3   0.00000   0.28571   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        4   0.00000   0.42857   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        5   0.00000   0.57143   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        6   0.00000   0.71429   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        7   0.00000   0.85714   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
-        8   0.00000   1.00000   0.12937   0.03454       nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        1   0.00000   0.00000   0.32032   0.04321      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   0.00000   1.00000   0.32010   0.04319      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+
+
+
+Time history of loading for wing surface: 3 --> VSP Surface: 3 ... NOTE: values per area! 
+
+  Station    Time       S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
+        1   0.00000   0.00000   0.13203   0.01425      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+        2   0.00000   1.00000   0.12937   0.01727      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan 
+
+
+
+Time history of loading for wing surface: 4 --> VSP Surface: 4 ... NOTE: values per area! 
+
+  Station    Time       S       Chord     Area      V/Vref        Cx            Cy            Cz           Cxo           Cyo           Czo          Cxi            Cyi           Czi           Cl            Cd            Cs            Clo           Cdo           Cso           Cli           Cdi           Csi           Cmx           Cmy           Cmz          Cmxo          Cmyo          Cmzo          Cmxi          Cmyi          Cmzi 
+        1   0.00000   0.00000   0.13203   0.01425      -nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan           nan           nan           nan  0.000000e+00  0.000000e+00  0.000000e+00           nan           nan           nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
+        2   0.00000   1.00000   0.12937   0.01727      -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan          -nan          -nan          -nan  0.000000e+00  0.000000e+00  0.000000e+00          -nan          -nan          -nan 
